buildscript {
    ext {
        springBootVersion = '2.1.6.RELEASE'
    }
    repositories {
        mavenCentral()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:2.1.6.RELEASE"
    }
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: "org.springframework.boot"
apply plugin: 'io.spring.dependency-management'

group 'com.servletProject.librarySystem'
version '1.0-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_12
targetCompatibility = JavaVersion.VERSION_12

compileJava {
    options.compilerArgs = ['--enable-preview']
}

compileTestJava {
    options.compilerArgs = ['--enable-preview']
}

test {
    jvmArgs(['--enable-preview'])
}

repositories {
    mavenCentral()
}


dependencies {
    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation("org.springframework.boot:spring-boot-starter-actuator")
    runtimeOnly('org.springframework.boot:spring-boot-devtools')
    compile('org.springframework.boot:spring-boot-starter-data-jpa')
    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
    compile('org.springframework.boot:spring-boot-starter-security')
    compile('com.auth0:java-jwt:3.4.0')
    compile('org.projectlombok:lombok')
    annotationProcessor('org.projectlombok:lombok')
    compile('org.postgresql:postgresql')
    compile('org.liquibase:liquibase-core')
    compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity5')

    testCompile('org.springframework.boot:spring-boot-starter-test')
    testCompile('org.springframework.security:spring-security-test')
    testCompile('junit:junit')
    testImplementation('org.mockito:mockito-core')
}
